# pruebas.ci.cd

./: README.md  pyproject.toml
.github/workflows/: pipeline.yml
src/: math_utils.py
test/: test_math.py
